<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddParkingActivity">

    <!-- Toolbar for Title -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Parking Name Input -->
    <EditText
        android:id="@+id/etParkingName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_parking_name"
        android:inputType="text"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Location Input -->
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_location"
        android:inputType="text"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etParkingName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Capacity Input -->
    <EditText
        android:id="@+id/etCapacity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_capacity"
        android:inputType="number"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:background="@android:drawable/edit_text"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etCapacity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <!-- Progress bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        app:layout_constraintTop_toBottomOf="@id/btn_submit_parking"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Submit Button -->
    <Button
        android:id="@+id/btn_submit_parking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>